Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-3245

FS root OBF regression

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Blocker Blocker
    • Lustre 2.4.0
    • Lustre 2.3.0, Lustre 2.4.0
    • 3
    • 8031

      Accessing the filesystem root by its FID fails with EINVAL. It seems that master and 2.3 are affected.

      $ lfs path2fid /mnt/lustre
      [0x200000007:0x1:0x0]
      $ ls /mnt/lustre
      $ ls /mnt/lustre/.lustre/fid/0x200000007:0x1:0x0
      ls: cannot access /mnt/lustre/.lustre/fid/0x200000007:0x1:0x0: Invalid argument

            jhammond John Hammond
            hdoreau Henri Doreau (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            10 Start watching this issue

              Created:
              Updated:
              Resolved: