lustre/mdd/mdd_device.c
@@ -562,7 +562,7 @@ static int obf_lookup(const struct lu_env *env, struct md_object *p,
                 GOTO(out, rc = -EINVAL);
         }
 
-	if (!fid_is_norm(f) && !fid_is_igif(f)) {
+	if (!fid_is_norm(f) && !fid_is_igif(f) && !fid_is_root(f)) {
 		CWARN("%s: "DFID" is invalid, sequence should be "
 		      ">= "LPX64" or within ["LPX64","LPX64"].\n",
 		      mdd2obd_dev(mdd)->obd_name, PFID(f),
